--- a/app/src/main/res/layout/activity_item_search_screen.xml
+++ b/app/src/main/res/layout/activity_item_search_screen.xml
@@ -18,7 +18,7 @@
     <EditText
             android:id="@+id/searchEditText"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="60dp"
             android:hint="Enter your search query"
             app:layout_constraintEnd_toEndOf="parent"
