--- a/app/src/main/res/layout/activity_item_search_screen.xml
+++ b/app/src/main/res/layout/activity_item_search_screen.xml
@@ -53,4 +53,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/searchButton"
             app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
+
+        <ListView
+        android:id="@+id/itemSearchResults"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/backButton"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
