--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Grocery_Screen">
 
     <edu.floridapoly.mobiledeviceapps.fall23.foogro_1.Navigation_Bar
-            android:id="@+id/navigation_bar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/navigation_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
-            android:layout_width="65dp"
-            android:layout_height="51dp" android:id="@+id/profile_home_button"
-            app:icon="@android:drawable/ic_menu_my_calendar"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="664dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="330dp"
-            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="Welcome, #Name"
-            android:layout_width="113dp"
-            android:layout_height="81dp" android:id="@+id/textView2"
-            android:fontFamily="@font/amarante" android:textSize="24sp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="21dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="629dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="18dp"
-            android:layout_marginEnd="280dp" app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:text="Choose Your Category to Compare Prices"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView3"
-            android:fontFamily="@font/amarante" android:textSize="24sp"
-            android:textAlignment="center" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="214dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="456dp"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/button15"
+        android:layout_width="180dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="222dp"
+        android:layout_marginTop="516dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="95dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <Button
-            android:text="Grocery"
-            android:layout_width="396dp"
-            android:layout_height="213dp" android:id="@+id/grocery_button"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="377dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="195dp" app:layout_constraintVertical_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="9dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        android:id="@+id/button17"
+        android:layout_width="180dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="222dp"
+        android:layout_marginTop="339dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="272dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="180dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="339dp"
+        android:layout_marginEnd="215dp"
+        android:layout_marginBottom="272dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button20"
+        android:layout_width="180dp"
+        android:layout_height="120dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="516dp"
+        android:layout_marginEnd="215dp"
+        android:layout_marginBottom="95dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="351dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="573dp"
+        android:ems="10"
+        android:hint="Search"
+        android:inputType="text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="172dp"
+        android:layout_marginBottom="660dp"
+        android:fontFamily="@font/amarante"
+        android:text="Grocery"
+        android:textSize="43sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/search_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="284dp"
+        android:layout_marginTop="8dp"
+        android:text="Search"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editTextText" />
+
+    <TextView
+        android:id="@+id/tvResults"
+        android:layout_width="247dp"
+        android:layout_height="138dp"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="175dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="418dp"
+        android:text="Query Results"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
