--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,7 +96,7 @@
         android:layout_marginEnd="172dp"
         android:layout_marginBottom="660dp"
         android:fontFamily="@font/amarante"
-        android:text="Grocery"
+        android:text="FooGro"
         android:textSize="43sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
