--- a/app/src/main/res/layout/activity_ai_queryscreen.xml
+++ b/app/src/main/res/layout/activity_ai_queryscreen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Ai_Meals">
+    tools:context=".Ai_QueryScreen">
 
     <TextView
         android:id="@+id/textView"
@@ -36,4 +36,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="320dp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
