Added new screen

--- a/app/src/main/res/layout/activity_user_list_screen.xml
+++ b/app/src/main/res/layout/activity_user_list_screen.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".User_List_Screen">
+    <edu.floridapoly.mobiledeviceapps.fall23.foogro_1.Navigation_Bar
+        android:id="@+id/navigation_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
