--- a/app/src/main/res/layout/activity_navigation_bar.xml
+++ b/app/src/main/res/layout/activity_navigation_bar.xml
@@ -29,6 +29,15 @@
             android:gravity="center"
             android:textColor="#FFFFFF"/>
     <Button
+        android:id="@+id/button3"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="List"
+        android:background="?android:selectableItemBackground"
+        android:gravity="center"
+        android:textColor="#FFFFFF"/>
+    <Button
             android:id="@+id/button4"
             android:layout_width="0dp"
             android:layout_weight="1"
