--- a/app/src/main/res/layout/activity_item_search_screen.xml
+++ b/app/src/main/res/layout/activity_item_search_screen.xml
@@ -15,6 +15,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TextView
+        android:id="@+id/item_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Item Search"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
             android:id="@+id/searchEditText"
             android:layout_width="0dp"
@@ -39,6 +48,16 @@
             app:layout_constraintEnd_toStartOf="@+id/backButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
+
+        <Button
+        android:id="@+id/addItemButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Add Item"
+        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
             android:id="@+id/backButton"
