--- a/app/src/main/res/layout/activity_cart_screen.xml
+++ b/app/src/main/res/layout/activity_cart_screen.xml
@@ -7,6 +7,23 @@
         android:layout_height="match_parent"
         tools:context=".Cart_Screen">
 
+        <!-- Screen title -->
+        <TextView
+        android:id="@+id/cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cart"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+        <!-- ListView to replace ScrollView
+        <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/cart" />
+        -->
+
     <!-- Scrollable View -->
     <ScrollView
             android:layout_width="0dp"
