--- a/app/src/main/res/layout/activity_item_details.xml
+++ b/app/src/main/res/layout/activity_item_details.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ItemDetailsActivity">
 
-
     <TextView
         android:id="@+id/itemNameTextView"
         android:layout_width="wrap_content"
@@ -25,21 +24,20 @@
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"/>
 
-    <ListView
-        android:id="@+id/priceListView"
+    <LinearLayout
+        android:id="@+id/pricesLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_below="@id/itemPriceTextView"
-        android:layout_marginTop="16dp"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp"/>
+        android:layout_marginTop="16dp"/>
 
     <Button
         android:id="@+id/addToCartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add to Cart"
-        android:layout_below="@id/priceListView"
+        android:layout_below="@id/pricesLayout"
         android:layout_marginTop="16dp"
         android:layout_centerHorizontal="true"/>
 </RelativeLayout>
