--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <!-- Horizontal Scroll View to contain the buttons -->
-
-
     <TextView
         android:id="@+id/tvFeaturedStores"
         android:layout_width="wrap_content"
@@ -80,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:gravity="center_vertical"
-                    android:text="Label 1" />
+                    android:text="Publix" />
             </LinearLayout>
 
 
@@ -107,7 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:gravity="center_vertical"
-                    android:text="Label 2" />
+                    android:text="Walmart" />
             </LinearLayout>
 
 
@@ -134,7 +130,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:gravity="center_vertical"
-                    android:text="Label 3" />
+                    android:text="Sam's Club" />
             </LinearLayout>
 
 
@@ -161,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:gravity="center_vertical"
-                    android:text="Label 4" />
+                    android:text="Kroger" />
             </LinearLayout>
 
 
