--- a/app/src/main/res/layout/list_item_store.xml
+++ b/app/src/main/res/layout/list_item_store.xml
@@ -10,23 +10,35 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:text="Store Name"
-        android:textAppearance="?attr/textAppearanceListItem" />
-
-    <TextView
-        android:id="@+id/storeItemPriceTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/storeItemNameTextView"
-        android:layout_marginStart="10dp"
-        android:text="Price"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textSize="16sp"
+        android:textColor="#000000"
+    android:fontFamily="sans-serif-medium"
+    />
 
     <Button
         android:id="@+id/storeItemAddToCartButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="Add to Cart" />
+        android:text="Add to Cart"
+        android:textSize="16sp"
+        android:textColor="#FFFFFF"
+        android:fontFamily="sans-serif-medium"
+        android:background="@drawable/button_background"
+    />
+
+
+    <TextView
+        android:id="@+id/storeItemPriceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toStartOf="@id/storeItemAddToCartButton"
+        android:layout_marginEnd="10dp"
+        android:text="Price"
+        android:textSize="16sp"
+        android:textColor="#000000"
+        android:fontFamily="sans-serif-medium"
+        />
 
     <TextView
         android:id="@+id/storeItemDescriptionTextView"
@@ -34,7 +46,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/storeItemNameTextView"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="25dp"
         android:text="Description"
-        android:textAppearance="?attr/textAppearanceListItemSmall" />
+        android:textSize="14sp"
+    android:textColor="#333333"
+    android:fontFamily="sans-serif"
+    />
 
 </RelativeLayout>
